// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FactionSelection /> renders 1`] = `
<DocumentFragment>
  <section
    class="h-screen w-screen flex flex-col justify-center items-center"
  >
    <article
      class="w-1/2 bg-white p-4 rounded-lg shadow-lg mt-4"
      id="color-picker-container"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <div>
          <h2
            class="text-2xl font-semibold me-2"
          >
            Player 1
          </h2>
        </div>
        <div />
      </div>
      <section
        class="flex justify-around mt-4 mb-4"
        role="group"
      >
        <div
          aria-label="Aggression Faction"
          class="hero-min color-box cursor-pointer bg-red-500"
        />
        <div
          aria-label="Leadership Faction"
          class="hero-min color-box cursor-pointer bg-blue-500"
        />
        <div
          aria-label="Justice Faction"
          class="hero-min color-box cursor-pointer bg-yellow-500"
        />
        <div
          aria-label="Protection Faction"
          class="hero-min color-box cursor-pointer bg-green-500"
        />
      </section>
    </article>
    <article
      class="w-1/2 bg-white p-4 rounded-lg shadow-lg mt-4"
      id="color-picker-container"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <div>
          <h2
            class="text-2xl font-semibold me-2"
          >
            Player 2
          </h2>
        </div>
        <div />
      </div>
      <section
        class="flex justify-around mt-4 mb-4"
        role="group"
      >
        <div
          aria-label="Aggression Faction"
          class="hero-min color-box cursor-pointer bg-red-500"
        />
        <div
          aria-label="Leadership Faction"
          class="hero-min color-box cursor-pointer bg-blue-500"
        />
        <div
          aria-label="Justice Faction"
          class="hero-min color-box cursor-pointer bg-yellow-500"
        />
        <div
          aria-label="Protection Faction"
          class="hero-min color-box cursor-pointer bg-green-500"
        />
      </section>
    </article>
    <div
      class="flex justify-center mt-4"
    >
      <button
        class="px-10 py-4 text-white font-semibold bg-sky-950  hover:bg-sky-700 rounded-md opacity-50 cursor-not-allowed"
        disabled=""
      >
        READY!
      </button>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<HeroSelection /> renders 1`] = `
<DocumentFragment>
  <section
    class="h-screen w-screen flex flex-col justify-center items-center"
  >
    <article
      class="w-1/2 bg-white p-4 rounded-lg shadow-lg mt-4"
      id="color-picker-container"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <div>
          <h2
            class="text-2xl font-semibold me-2"
          >
            Player 1
          </h2>
        </div>
        <div />
      </div>
      <section
        class="flex justify-around mt-4 mb-4"
        role="group"
      >
        <div
          aria-label="Iron Man"
          class="hero-min color-box cursor-pointer bg-cover bg-no-repeat"
          style="background-image: url(/01029a.png);"
        />
        <div
          aria-label="Spider-Man"
          class="hero-min color-box cursor-pointer bg-cover bg-no-repeat"
          style="background-image: url(/01001a.png);"
        />
      </section>
    </article>
    <article
      class="w-1/2 bg-white p-4 rounded-lg shadow-lg mt-4"
      id="color-picker-container"
    >
      <div
        class="flex items-center justify-between mb-4"
      >
        <div>
          <h2
            class="text-2xl font-semibold me-2"
          >
            Player 2
          </h2>
        </div>
        <div />
      </div>
      <section
        class="flex justify-around mt-4 mb-4"
        role="group"
      >
        <div
          aria-label="Captain Marvel"
          class="hero-min color-box cursor-pointer bg-cover bg-no-repeat"
          style="background-image: url(/01010a.png);"
        />
        <div
          aria-label="She-Hulk"
          class="hero-min color-box cursor-pointer bg-cover bg-no-repeat"
          style="background-image: url(/01019a.png);"
        />
      </section>
    </article>
    <div
      class="flex justify-center mt-4"
    >
      <button
        class="px-10 py-4 text-white font-semibold bg-sky-950  hover:bg-sky-700 rounded-md opacity-50 cursor-not-allowed"
        disabled=""
      >
        READY!
      </button>
    </div>
  </section>
</DocumentFragment>
`;
